# Adaptive-Multiple-Distributed-Spiral-Search-Algorithm

./: .gitignore  CMakeLists.txt  README.md  runSensorDestinationErrorExperiments.sh  runexperimentset4.sh  runntimes.sh
Centralized/: README.md  run.py  run_exp1.py  run_exp2.py  run_sub1.py
Centralized/experiments/: 5x5_r4_rg4_f2.xml  8by8_r8_rg16_f128_t10.xml  Experiment1_rg16.xml  Experiment1_rg4.xml  Experiment1_rg64.xml  Experiment2_r14.xml  Experiment2_r16.xml  Experiment2_r24.xml  Experiment2_r26.xml  Experiment2_r32.xml  Experiment2_r8.xml  Experiment3_food100.xml  Experiment3_food150.xml  Experiment3_food250.xml  Experiment3_food300.xml  Test_World.xml  Test_World2.xml
Deliver_to_center/: README.md  build.sh  run.py  runexperiments.sh  runexperimentset2.sh  runexperimentset3.sh
Deliver_to_center/experiments/: 5x5_r4_rg4_f2.xml  8by8_r8_rg16_f128_t10.xml  Experiment1_rg16.xml  Experiment1_rg4.xml  Experiment2_r32.xml  Experiment2_r4.xml  Experiment2_r8.xml  Test_World2.xml
Deliver_to_center/source/: CMakeLists.txt
Distributed/: CMakeLists.txt.orig  argos_log.txt  run.py  run_exp3.py  runtargetsexperiment.sh
Distributed/experiments/: 5x5_r4_rg4_f2.xml  8by8_r8_rg16_f128_t10.xml  Experiment1_rg16.xml  Experiment1_rg4.xml  Experiment1_rg64.xml  Experiment2_r14.xml  Experiment2_r20.xml  Experiment2_r26.xml  Experiment2_r32.xml  Experiment2_r4.xml  Experiment2_r8.xml  Experiment3_food150.xml  Experiment3_food200.xml  Experiment3_food300.xml  (+5 more)
Not_deliver_to_center/: CMakeLists.txt  README.md  run.py  run.sh  runSensorDestinationErrorExperiments  runexperimentset1.sh
experiments/: DDSA.xml  DDSAC.xml  DDSAPL.xml  DSA.xml
source/DSA/: CMakeLists.txt  DSA_controller.cpp  DSA_controller.h  DSA_loop_functions.cpp  DSA_loop_functions.h  DSA_qt_user_functions.cpp
(+147 files in other folders)
